--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,14 @@ body {
   overflow: auto;
 }
 
+#bottom {
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  background-color: lightsteelblue;
+  z-index: 1;
+}
+
 #board {
   position: relative;
   width: 90%;
@@ -23,6 +31,7 @@ body {
 
 #player {
   position: absolute;
+  background-color: coral;
 }
 
 .obstacle {
